[gd_scene load_steps=21 format=3 uid="uid://b7ysmyoo32s6n"]

[ext_resource type="Script" uid="uid://k8hqhqyam6fl" path="res://scripts/combat/slot_machine.gd" id="1_agdmm"]
[ext_resource type="Script" uid="uid://ifawnadk6qma" path="res://scripts/combat/spin_button.gd" id="2_2vf6k"]
[ext_resource type="Texture2D" uid="uid://ewmdxe2waxxu" path="res://donjon_test.png" id="2_3ucdj"]
[ext_resource type="Texture2D" uid="uid://cg1vvwv84qgeb" path="res://assets/player/Sprites_player/attack/Roll1.png" id="2_dwfc2"]
[ext_resource type="Texture2D" uid="uid://dstd86ohe0g5c" path="res://assets/player/Sprites_player/attack/Roll2.png" id="3_bjjkd"]
[ext_resource type="AudioStream" uid="uid://c5op2qivo2vxl" path="res://assets/sound/sound/roll_sound.wav" id="3_et0hv"]
[ext_resource type="Texture2D" uid="uid://exbt5nralpmd" path="res://assets/enemies/Sprites_ennemy/Slime.png" id="3_i6cki"]
[ext_resource type="Texture2D" uid="uid://ovp76saaudst" path="res://assets/player/Sprites_player/attack/Roll3.png" id="4_3ucdj"]
[ext_resource type="Texture2D" uid="uid://dj6y7emowrjo3" path="res://assets/player/Sprites_player/attack/Roll4.png" id="5_4tvcy"]
[ext_resource type="Texture2D" uid="uid://c64s0yqdcls1v" path="res://assets/player/Sprites_player/idle/player-idle-1.png" id="6_wxo0u"]
[ext_resource type="Texture2D" uid="uid://bmrivbyck1y68" path="res://assets/player/Sprites_player/idle/player-idle-2.png" id="7_fj6df"]
[ext_resource type="Texture2D" uid="uid://dcjkwcim8bbtn" path="res://assets/player/Sprites_player/idle/player-idle-3.png" id="8_gdvkg"]
[ext_resource type="Texture2D" uid="uid://bmfuty0bu1pb1" path="res://assets/player/Sprites_player/idle/player-idle-4.png" id="9_2vf6k"]
[ext_resource type="Texture2D" uid="uid://bev83wi470bs1" path="res://icon.svg" id="11_bjjkd"]
[ext_resource type="Texture2D" uid="uid://dlq2tmkucn7ld" path="res://assets/powers/Sprites_pouvoirs/fireball_on.jpg" id="12_4tvcy"]
[ext_resource type="Texture2D" uid="uid://cpvgec2mkt85e" path="res://assets/powers/Sprites_pouvoirs/soin_on.png" id="13_wxo0u"]
[ext_resource type="Texture2D" uid="uid://vp28u1gk0bl" path="res://assets/powers/Sprites_pouvoirs/test_cadre.png" id="15_fj6df"]

[sub_resource type="SpriteFrames" id="SpriteFrames_et0hv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_dwfc2")
}, {
"duration": 1.0,
"texture": ExtResource("3_bjjkd")
}, {
"duration": 1.0,
"texture": ExtResource("4_3ucdj")
}, {
"duration": 1.0,
"texture": ExtResource("5_4tvcy")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_wxo0u")
}, {
"duration": 1.0,
"texture": ExtResource("7_fj6df")
}, {
"duration": 1.0,
"texture": ExtResource("8_gdvkg")
}, {
"duration": 1.0,
"texture": ExtResource("9_2vf6k")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i6cki"]
bg_color = Color(0.32069588, 0.6990689, 0.28922397, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_knkoj"]
bg_color = Color(0.9978848, 0.28675395, 0.56507045, 1)

[node name="SlotMachine" type="Node2D"]
script = ExtResource("1_agdmm")

[node name="InventoryPanel" type="Panel" parent="."]
visible = false
offset_left = 7.0
offset_top = 6.0
offset_right = 1650.0
offset_bottom = 962.0

[node name="CloseButton" type="Button" parent="InventoryPanel"]
layout_mode = 0
offset_left = 776.0
offset_top = 422.0
offset_right = 841.0
offset_bottom = 453.0
text = "Fermer"

[node name="Label" type="Label" parent="InventoryPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Inventaire"

[node name="PassifButton1" type="Button" parent="InventoryPanel"]
layout_mode = 0
offset_left = 233.0
offset_top = 131.0
offset_right = 508.0
offset_bottom = 430.0

[node name="NomLabel" type="Label" parent="InventoryPanel/PassifButton1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="EffetLabel" type="Label" parent="InventoryPanel/PassifButton1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="ImageTextureRect" type="TextureRect" parent="InventoryPanel/PassifButton1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PassifButton2" type="Button" parent="InventoryPanel"]
layout_mode = 0
offset_left = 75.0
offset_top = 116.0
offset_right = 125.0
offset_bottom = 169.0

[node name="NomLabel" type="Label" parent="InventoryPanel/PassifButton2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="EffetLabel" type="Label" parent="InventoryPanel/PassifButton2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="ImageTextureRect" type="TextureRect" parent="InventoryPanel/PassifButton2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PassifButton3" type="Button" parent="InventoryPanel"]
layout_mode = 0
offset_left = 75.0
offset_top = 116.0
offset_right = 125.0
offset_bottom = 169.0

[node name="NomLabel" type="Label" parent="InventoryPanel/PassifButton3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="EffetLabel" type="Label" parent="InventoryPanel/PassifButton3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="ImageTextureRect" type="TextureRect" parent="InventoryPanel/PassifButton3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Container" type="GridContainer" parent="."]
offset_left = 253.0
offset_top = 330.0
offset_right = 1912.9998
offset_bottom = 504.0
scale = Vector2(0.8, 0.8)
columns = 5

[node name="TextureRect" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect2" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect3" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect4" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect5" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect6" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect7" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect8" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect9" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect10" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect11" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect12" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect13" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect14" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect15" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect16" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect17" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect18" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect19" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect20" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect21" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect22" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect23" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect24" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect25" type="TextureRect" parent="Container"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SpinButton" type="Button" parent="."]
offset_left = 840.0
offset_top = 871.62506
offset_right = 1023.0
offset_bottom = 963.62506
text = "Lancer"
script = ExtResource("2_2vf6k")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="SpinButton"]
stream = ExtResource("3_et0hv")

[node name="BackpackButton" type="Button" parent="."]
offset_left = 39.0
offset_top = 38.0
offset_right = 119.0
offset_bottom = 69.0
text = "Sac Ã  dos"

[node name="CombatPanel" type="Panel" parent="."]
offset_left = 288.0
offset_top = 13.0
offset_right = 1556.0
offset_bottom = 341.0

[node name="SpritesContainer" type="HBoxContainer" parent="CombatPanel"]
layout_mode = 0
offset_left = 27.0
offset_top = 66.0
offset_right = 1149.0
offset_bottom = 335.0

[node name="fond_donjon" type="Sprite2D" parent="CombatPanel/SpritesContainer"]
position = Vector2(607.25, 96.99999)
scale = Vector2(0.9386161, 0.41015625)
texture = ExtResource("2_3ucdj")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="CombatPanel/SpritesContainer"]
position = Vector2(398, 119)
scale = Vector2(5.7647767, 4.389669)
sprite_frames = SubResource("SpriteFrames_et0hv")
animation = &"attack"
frame = 3
frame_progress = 1.0

[node name="PlayerHPBar" type="ProgressBar" parent="CombatPanel/SpritesContainer/PlayerSprite"]
offset_left = -17.846516
offset_top = -21.011772
offset_right = 21.410198
offset_bottom = -13.949738
theme_override_styles/fill = SubResource("StyleBoxFlat_i6cki")
value = 100.0
show_percentage = false

[node name="PlayerHPLabel" type="Label" parent="CombatPanel/SpritesContainer/PlayerSprite"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -11.948628
offset_top = -27.846
offset_right = -11.948627
offset_bottom = -36.846
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
size_flags_vertical = 1
theme_override_font_sizes/font_size = 14
text = "test"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_trim_flags = 0

[node name="DamageLabel" type="Label" parent="CombatPanel/SpritesContainer/PlayerSprite"]
visible = false
offset_left = -39.35645
offset_top = 2.6802254
offset_right = -38.35645
offset_bottom = 30.680225
theme_override_font_sizes/font_size = 20

[node name="EnemySprite" type="Sprite2D" parent="CombatPanel/SpritesContainer"]
position = Vector2(806, 125)
scale = Vector2(0.48087093, 0.42363948)
texture = ExtResource("3_i6cki")

[node name="EnemyHPBar" type="ProgressBar" parent="CombatPanel/SpritesContainer/EnemySprite"]
offset_left = -252.77359
offset_top = -269.62982
offset_right = 285.83237
offset_bottom = -194.91434
theme_override_font_sizes/font_size = 25
theme_override_styles/fill = SubResource("StyleBoxFlat_knkoj")
value = 100.0
show_percentage = false

[node name="EnemyName" type="Label" parent="CombatPanel/SpritesContainer/EnemySprite"]
offset_left = -972.30133
offset_top = -607.181
offset_right = 987.7592
offset_bottom = -112.96924
theme_override_font_sizes/font_size = 120
text = "Robert"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyHPLabel" type="Label" parent="CombatPanel/SpritesContainer/EnemySprite"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = -0.39600003
anchor_right = 0.5
anchor_bottom = -0.39600003
offset_left = -382.85315
offset_top = -196.5798
offset_right = 159.91199
offset_bottom = -59.579803
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyDamageLabel" type="Label" parent="CombatPanel/SpritesContainer/EnemySprite"]
offset_left = -111.36351
offset_top = 91.5263
offset_right = 114.86415
offset_bottom = 296.81775
theme_override_font_sizes/font_size = 92
text = "test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChoixPanel" type="Panel" parent="."]
offset_left = 292.0
offset_top = 268.0
offset_right = 1559.0
offset_bottom = 842.0

[node name="Bouton1" type="Button" parent="ChoixPanel"]
layout_mode = 0
offset_left = 83.0
offset_top = 81.0
offset_right = 391.0
offset_bottom = 500.0

[node name="NomLabel" type="Label" parent="ChoixPanel/Bouton1"]
layout_mode = 0
offset_left = 19.0
offset_top = 14.0
offset_right = 293.0
offset_bottom = 64.0

[node name="ImageTextureRect" type="TextureRect" parent="ChoixPanel/Bouton1"]
layout_mode = 0
offset_left = 69.0
offset_top = 63.0
offset_right = 253.0
offset_bottom = 234.0

[node name="EffetLabel" type="Label" parent="ChoixPanel/Bouton1"]
layout_mode = 0
offset_left = 11.0
offset_top = 268.0
offset_right = 310.0
offset_bottom = 411.0
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
justification_flags = 131

[node name="Bouton2" type="Button" parent="ChoixPanel"]
layout_mode = 0
offset_left = 465.0
offset_top = 87.0
offset_right = 770.0
offset_bottom = 505.0

[node name="NomLabel" type="Label" parent="ChoixPanel/Bouton2"]
layout_mode = 0
offset_left = 47.0
offset_top = 8.0
offset_right = 282.0
offset_bottom = 61.0

[node name="ImageTextureRect" type="TextureRect" parent="ChoixPanel/Bouton2"]
layout_mode = 0
offset_left = 44.0
offset_top = 75.0
offset_right = 263.0
offset_bottom = 239.0

[node name="EffetLabel" type="Label" parent="ChoixPanel/Bouton2"]
layout_mode = 0
offset_left = 1.0
offset_top = 273.0
offset_right = 300.0
offset_bottom = 416.0
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
justification_flags = 131

[node name="Bouton3" type="Button" parent="ChoixPanel"]
layout_mode = 0
offset_left = 835.0
offset_top = 92.0
offset_right = 1137.0
offset_bottom = 512.0

[node name="NomLabel" type="Label" parent="ChoixPanel/Bouton3"]
layout_mode = 0
offset_left = 24.0
offset_top = -3.0
offset_right = 285.0
offset_bottom = 50.0

[node name="ImageTextureRect" type="TextureRect" parent="ChoixPanel/Bouton3"]
layout_mode = 0
offset_left = 50.0
offset_top = 87.0
offset_right = 274.0
offset_bottom = 253.0

[node name="EffetLabel" type="Label" parent="ChoixPanel/Bouton3"]
layout_mode = 0
offset_left = -2.0
offset_top = 242.0
offset_right = 294.0
offset_bottom = 421.0
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
justification_flags = 131

[node name="Pouvoir1" type="TextureButton" parent="."]
offset_left = 539.0
offset_top = 851.62506
offset_right = 667.0
offset_bottom = 979.62506
texture_normal = ExtResource("12_4tvcy")
ignore_texture_size = true
stretch_mode = 0

[node name="Pouvoir2" type="TextureButton" parent="."]
offset_left = 694.0
offset_top = 851.62506
offset_right = 822.0
offset_bottom = 979.62506
texture_normal = ExtResource("13_wxo0u")
ignore_texture_size = true
stretch_mode = 0

[node name="Pouvoir3" type="TextureButton" parent="."]
offset_left = 1036.0
offset_top = 853.62506
offset_right = 1164.0
offset_bottom = 981.62506
texture_normal = ExtResource("11_bjjkd")

[node name="Pouvoir4" type="TextureButton" parent="."]
offset_left = 1179.0
offset_top = 855.62506
offset_right = 1307.0
offset_bottom = 983.62506
texture_normal = ExtResource("11_bjjkd")

[node name="TestCadre" type="Sprite2D" parent="."]
position = Vector2(605, 924.00006)
scale = Vector2(2.533333, 2.4147065)
texture = ExtResource("15_fj6df")

[node name="TestCadre2" type="Sprite2D" parent="."]
position = Vector2(758, 922.31256)
scale = Vector2(2.533333, 2.477942)
texture = ExtResource("15_fj6df")

[node name="TestCadre3" type="Sprite2D" parent="."]
position = Vector2(1103, 925.62506)
scale = Vector2(2.533333, 2.477942)
texture = ExtResource("15_fj6df")

[node name="TestCadre4" type="Sprite2D" parent="."]
position = Vector2(1244, 928.62506)
scale = Vector2(2.533333, 2.477942)
texture = ExtResource("15_fj6df")

[connection signal="pressed" from="SpinButton" to="SpinButton" method="_on_pressed"]
